<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_day"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_sunrise_set"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_twilight"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_hour"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/tag_cloud_cover"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/tag_seeing"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/tag_transparency"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_templabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_temperature"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/tag_wind"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:gravity="center_vertical"
            android:text="@string/tag_humidity"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:text="@string/tag_precipitation"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="3dp"
        android:background="@color/line_white" />

    <HorizontalScrollView
        android:id="@+id/scrollview_forecast"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/black" >
    </HorizontalScrollView>

</LinearLayout>