<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_settings"
            android:textSize="25.0dip"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6.0dip"
            android:text="@string/title_location"
            android:textSize="18.0dip"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/linearlayout_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#ff333333"
            android:padding="15dp" >

            <TextView
                android:id="@+id/textview_locationlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/tag_active_location" />

            <Button
                android:id="@+id/button_addlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="onClickAddLocation"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/button_deletelocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button_addlocation"
                android:onClick="onClickDeleteLocation"
                android:text="@string/btn_delete" />

            <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button_deletelocation"
                android:layout_toRightOf="@+id/textview_locationlabel" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_locator_choose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.0dip"
                    android:text="@string/title_locator"
                    android:textSize="18.0dip"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radiogroup_locator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#ff333333"
                    android:orientation="horizontal"
                    android:padding="15dp" >

                    <RadioButton
                        android:id="@+id/btn_locator_baidu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="@string/radio_locator_baidu" />

                    <RadioButton
                        android:id="@+id/btn_locator_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_locator_google" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tempunit_choose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.0dip"
                    android:text="@string/title_temperature"
                    android:textSize="18.0dip"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radiogroup_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="#ff333333"
                    android:orientation="horizontal"
                    android:padding="15dp" >

                    <RadioButton
                        android:id="@+id/btn_temp_cen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="true"
                        android:text="@string/radio_temp_cen" />

                    <RadioButton
                        android:id="@+id/btn_temp_fah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_temp_fah" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_settings_ok"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickOK"
            android:text="@string/btn_ok" />
    </LinearLayout>

</ScrollView>